# elm-test-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  ROADMAP.md  build.rs  default.nix
.config/: goreleaser.yaml  targets.json
.github/workflows/: ci.yml  release.yml
elm/: .gitignore  LICENSE  README.md  elm.json
elm/src/ElmTestRs/Test/: Failure.elm  Reporter.elm  Result.elm  Runner.elm  SeededRunners.elm
elm/src/ElmTestRs/Test/Reporter/: Console.elm  Interface.elm  Json.elm  Junit.elm
elm/src/ElmTestRunner/: Failure.elm  Log.elm  Reporter.elm  Result.elm  Runner.elm  SeededRunners.elm
elm/src/ElmTestRunner/Reporter/: Console.elm  Interface.elm  Json.elm  Junit.elm  Progress.elm
elm/src/Internal/: Reporter.elm  SeededRunners.elm
examples/: command.rs  elm-json-bin.rs  elm-json-lib.rs  elmi-to-json-bin.rs  find_root.rs  glob.rs  js_worker_template.js  supervisor.rs  tcp_client.js  tcp_server.js  tcp_server.rs  template.rs  template_elm.rs  template_js.rs
examples/elm-json/: elm.json
examples/reporter/: .gitignore  Makefile  elm.json  main.js
examples/reporter/src/: Data.elm  Reporter.elm
examples/reporter/src/Reporter/: Console.elm  Interface.elm  Json.elm  Junit.elm
examples/supervisor/: cli.js  reporter.js  runner.js  supervisor.js
examples/tcp-client-server/: client.js  server.js
npm/: README.md  binary.js  elm-test-rs.js  install.js  package.json
src/: deps.rs  elm_json.rs  elmi.rs  help.rs  init.rs  install.rs  logger.rs  main.rs  make.rs  parser.rs  project.rs  run.rs  utils.rs  watch.rs
templates/: Reporter.elm  Runner.elm  deno_linereader.mjs  deno_logger.mjs  deno_runner.mjs  deno_supervisor.mjs  node_polyfills.js  node_reporter.js  node_runner.js  node_supervisor.js  polyfills.js  reporter.js  runner.js  supervisor.js
tests/: README.md  elm-tooling.json  end-to-end.rs
tests-example-projects/: README.md  check_all_examples.sh
tests/example-projects/erroring/missing-src-dir/: elm.json
tests/example-projects/erroring/missing-src-dir/tests/: Tests.elm
tests/example-projects/failing/coverage-expect-failing-test/tests/: Tests.elm
tests/example-projects/failing/coverage-not-met/tests/: Tests.elm
tests/example-projects/failing/coverage-of-failing/tests/: Tests.elm
tests/example-projects/failing/debug-log/tests/: Tests.elm
tests/example-projects/failing/distribution-expect-failing-distribution/tests/: Tests.elm
tests/example-projects/failing/distribution-expect-failing-test/src/: Question.elm
tests/example-projects/failing/distribution-expect-failing-test/tests/: Tests.elm
tests/example-projects/failing/distribution-of-failing/tests/: Tests.elm
tests/example-projects/failing/no-test/: elm.json
tests/example-projects/failing/no-test/src/: EmptyPlaceholderModule.elm
tests/example-projects/failing/no-test/tests/: Tests.elm
tests/example-projects/failing/todo/: elm.json
tests/example-projects/failing/todo/tests/: Tests.elm
tests/example-projects/kitchensink/coverage/tests/: Tests.elm
tests/example-projects/kitchensink/distribution/tests/: Tests.elm
tests/example-projects/passing/app/: elm.json
tests/example-projects/passing/coverage-report/tests/: Tests.elm
tests/example-projects/passing/coverage-sufficient/tests/: Tests.elm
tests/example-projects/passing/distribution-expect/tests/: Tests.elm
tests/example-projects/passing/distribution-report/src/: Main.elm
tests/example-projects/passing/distribution-report/tests/: Tests.elm
tests/example-projects/passing/es-module/: package.json
tests/example-projects/passing/symlink/: elm.json
tests/example-projects/passing/symlink/src/: Main.elm
tests/example-projects/passing/symlink/tests/: Tests.elm
