[package]
name = "elm-test-rs"
version = "1.0.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>", "Harry Sarson <harry.sarson@hotmail.co.uk>"]
edition = "2018"
description = "Simple and fast Rust alternative to node-test-runner to run elm tests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
pathdiff = "0.2.0"
num_cpus = "1.13.0"
regex = "1.4.3"
# pubgrub-dependency-provider-elm = { path = "../pubgrub-dependency-provider-elm" }
pubgrub-dependency-provider-elm = { git = "https://github.com/mpizenberg/pubgrub-dependency-provider-elm", branch = "master" }
serde_json = "1.0.61"
ureq = "2.0.1"
dirs-next = "2.0.0"
pubgrub = { version = "0.2", features = ["serde"] }
nom = "6.1.0"
notify = "4.0.15"
atty = "0.2.14"
anyhow = "1.0.38"
clap = { version = "2.33.3", default-features = false }
serde = { version = "1.0.123", default-features = false }
log = { version = "0.4.14", default-features = false }
stderrlog = { version = "0.5.1", default-features = false }
walkdir = "2.3.1" # to find all elm files in a given directory
either = { version = "1.6.1", default-features = false } # for iterators on two branches
which = "4.0.2" # to find the path of the elm executable
dunce = "1.0.1" # to convert Windows UNC paths back to simple absolute paths

[dev-dependencies]
assert_cmd = "1.0.3"

[build-dependencies]
fs_extra = "1.2.0"
dirs-next = "2.0.0"
