[package]
name = "elm-test-rs"
version = "1.0.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>", "Harry Sarson <harry.sarson@hotmail.co.uk>"]
edition = "2018"
description = "Simple and fast Rust alternative to node-test-runner to run elm tests"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0" # to interpret CLI glob patterns
pathdiff = "0.2.0" # to compute a path relative to another path
num_cpus = "1.13.0" # to get the number of logic cores
regex = "1.4.3" # to path the elm kernel code
pubgrub = { version = "0.2", features = ["serde"] } # for dependency solving
# pubgrub-dependency-provider-elm = { path = "../pubgrub-dependency-provider-elm" }
pubgrub-dependency-provider-elm = { git = "https://github.com/mpizenberg/pubgrub-dependency-provider-elm", branch = "master" }
serde_json = "1.0.61" # for JSON serialization
serde = { version = "1.0.123", default-features = false }
ureq = "2.0.1" # for https requests to the package website
dirs-next = "2.0.0" # to handle ELM_HOME
nom = "6.1.0" # to parse the tests files and extract potential tests
notify = "4.0.15" # for --watch mode
atty = "0.2.14" # to handle color correctly in pipes
anyhow = "1.0.38" # for error handling
clap = { version = "2.33.3", default-features = false } # for CLI argument parsing
log = { version = "0.4.14", default-features = false } # for debug logs with -vvv
stderrlog = { version = "0.5.1", default-features = false }
walkdir = "2.3.1" # to find all elm files in a given directory
either = { version = "1.6.1", default-features = false } # for iterators on two branches
which = "4.0.2" # to find the path of the elm executable
dunce = "1.0.1" # to convert Windows UNC paths back to simple absolute paths

[dev-dependencies]
assert_cmd = "1.0.3"

[build-dependencies]
fs_extra = "1.2.0"
dirs-next = "2.0.0"
